--- a/js.html
+++ b/js.html
@@ -7,7 +7,7 @@
 <body>
   <script>
     // Your JavaScript goes here!
-   console.log("heo")
+   console.log("hello world")
     
     
   </script>
