--- a/js.html
+++ b/js.html
@@ -7,8 +7,18 @@
 <body>
   <script>
     // Your JavaScript goes here!
-   console.log("hello world")
-    
+   let userChoice=prompt("enter your choice")
+   let computerChoice= Math.random()
+   if(computerChoice<=0.33){
+    computerChoice="rock"
+   }
+   else if(computerChoice>0.33 && computerChoice<0.66){
+    computerChoice="paper"
+   }
+   else{
+    computerChoice="scissors"
+   }
+   
     
   </script>
 </body>
