--- a/js.html
+++ b/js.html
@@ -5,6 +5,7 @@
   <title>Page Title</title>
 </head>
 <body>
+  <h1>this is a game</h1>
   <script>
    function playRound(userChoice,computerChoice){
     if (userChoice==computerChoice)return "no result or tie round"
