--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Page Title</title>
+</head>
+<body>
+  <h1>this is a game</h1>
+  <script>
+   function playRound(userChoice,computerChoice){
+    if (userChoice==computerChoice)return "no result or tie round"
+  else if((userChoice=="paper"&&computerChoice=="scissors")||(userChoice=="scissors"
+  &&computerChoice=="rock")||(userChoice=="rock"&&computerChoice=="paper"))
+  {
+    return "sorry you lost against computer"
+  }
+  else{
+    return "congrats you won against computer"
+  }
+   }
+   let userChoice=prompt("enter your choice")
+   let computerChoice= Math.random()
+   if(computerChoice<=0.33){
+    computerChoice="rock"
+   }
+   else if(computerChoice>0.33 && computerChoice<0.66){
+    computerChoice="paper"
+   }
+   else{
+    computerChoice="scissors"
+   }
+   console.log("Your Choice:",userChoice)
+   console.log("computer choice:",computerChoice)
+   // calling function 
+   console.log(playRound(userChoice,computerChoice))
+    
+  </script>
+</body>
+</html>
