--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
 </head>
 <body>
   <h1>this is a game</h1>
+  
   <script>
+    let w="you won"
+    let l="you lost"
    function playRound(userChoice,computerChoice){
     if (userChoice==computerChoice)return "no result or tie round"
   else if((userChoice=="paper"&&computerChoice=="scissors")||(userChoice=="scissors"
   &&computerChoice=="rock")||(userChoice=="rock"&&computerChoice=="paper"))
   {
-    return "sorry you lost against computer"
+    
+    return l
+  
   }
   else{
-    return "congrats you won against computer"
+    return w
+   
   }
    }
    let userChoice=prompt("enter your choice")
@@ -28,10 +34,10 @@
    else{
     computerChoice="scissors"
    }
-   console.log("Your Choice:",userChoice)
-   console.log("computer choice:",computerChoice)
+   document.write("<h1>Your choice:</h1>",userChoice)
+   document.write("<h1>Computer's choice:</h1>",computerChoice)
    // calling function 
-   console.log(playRound(userChoice,computerChoice))
+   document.write("<h2>Result</h2>",playRound(userChoice,computerChoice))
     
   </script>
 </body>
