--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     return w
    
   }
-  else return i   
+    else return i   }
    
    let userChoice=prompt("enter your choice")
    let computerChoice= Math.random()
