--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
   
-  <script>
-    let w="you won"
-    let l="you lost"
-    let i="invalid input,wrong input"
+<script>
    function playRound(userChoice,computerChoice){
-    document.write("<h1>Computer's choice:</h1>",computerChoice)  
-    if (userChoice==computerChoice)return "no result or tie round"
+    div.append("computer choice:",computerChoice) 
+    if (userChoice==computerChoice)
+    {
+      div.append(" game tied")
+    }
   else if((userChoice=="paper"&&computerChoice=="scissors")||(userChoice=="scissors"
   &&computerChoice=="rock")||(userChoice=="rock"&&computerChoice=="paper"))
   { 
-    return l
+    div.append(" you won")
   }
   else if((userChoice=="paper"&&computerChoice=="rock")||(userChoice=="scissors"
-  &&computerChoice=="paper")||(userChoice=="rock"&&computerChoice=="scissors")){
-    
-    return w   
+  &&computerChoice=="paper")||(userChoice=="rock"&&computerChoice=="scissors")){ 
+    div.append(" you lost")
   }
-    else return i   }
+    }
 
-   
-  
+  const content=document.querySelector('h1');
+  const div=document.createElement('div')
+  content.appendChild(div)
    let computerChoice= Math.random()
    if(computerChoice<=0.33){
     computerChoice="rock"
@@ -43,17 +43,17 @@
    const b1=document.querySelector('#rock')
    b1.addEventListener('click',()=>{
     let userChoice="rock"
-    document.write("<h1>Result</h1>",playRound("rock",computerChoice))
+    playRound("rock",computerChoice)
    })
    const b2=document.querySelector('#paper')
    b2.addEventListener('click',()=>{
     let userChoice="paper"
-    document.write("<h1>Result</h1>",playRound("paper",computerChoice))
+    playRound("paper",computerChoice)
    })
    const b3=document.querySelector('#scissors')
    b3.addEventListener('click',()=>{
     let userChoice="scissors"
-    document.write("<h1>Result</h1>",playRound("scissors",computerChoice))
+    playRound("scissors",computerChoice)
    })
    
    // calling function 
