added images with flex

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <h1>MAN vs COMPUTER</h1>
   <p>Let's see if you can save humankind by beating the computer...</p>
   <p>Choose your Weapon!</p>
-  <button id="rock">Rock</button>
-  <button id="paper">Paper</button>
-  <button id="scissors">Scissors</button>
+  <div class="buttons">
+    <div id="rock"><img src="cave-painting.png" alt=""></div>
+    <div id="paper"><img src="document.png" alt=""></div>
+    <div id="scissors"><img src="scissors-opened-tool-shape.png" alt=""></div>
+  </div>
+  
   <h2>Result</h2>
   
 <script>
